--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="images"><img src="./images/image-header-desktop.jpg" alt=""></div>
+      <div class="images"></div>
 
     </div>
   </main>
